--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #111;
+  font-family: Arial, sans-serif;
+}
+
+h2 {
+  color: lightgray;
+  margin: 20px 0;
+  position: relative;
+}
+
+.row-posters {
+  display: flex;
+  overflow-y: hidden;
+}
+
+.row-posters::-webkit-scrollbar {
+  display: none;
+}
+
+.row-posters .row-poster {
+  max-height: 150px;
+  object-fit: contain;
+  margin-right: 15px;
+  transition: all 0.3s ease-in-out;
+  opacity: 0.7;
+}
+
+.row-posters .row-poster-large {
+  max-height: 250px;
+}
+
+.row-posters img:hover {
+  transform: scale(1.2);
+  opacity: 1;
+  cursor: pointer;
+}
+
+.banner {
+  background-size: cover;
+  background-position: center center;
+  height: 500px;
+  color: #fff;
+  object-fit: contain;
+  position: relative;
+}
+
+.banner-content {
+  padding-top: 165px;
+  padding-left: 80px;
+}
+
+.banner h1 {
+  font-size: 3rem;
+}
+
+.banner-description {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-top: 20px;
+  width: 75%;
+}
+
+.banner-button {
+  cursor: pointer;
+  background: rgba(51, 51, 51, 0.5);
+  color: #fff;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding: 10px 20px;
+  margin: 20px 10px;
+  border-radius: 5px;
+}
+
+.banner-button:hover {
+  color: #000;
+  background-color: #e6e6e6;
+  transition: all 0.2s ease-in;
+}
+
+.banner-fade-bottom {
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transition: all 0.5s ease-in;
+}
+
+.nav > img {
+  width: 150px;
+  height: 70px;
+  object-fit: contain;
+  margin-left: 30px;
+}
+
+.nav .nav-avatar {
+  width: 50px;
+  height: 50px;
+  margin: 10px 30px 10px 10px;
+}
+
+.nav-black {
+  background-color: #111;
 }
